# ComputerGraphicsExercices

./: README.md  advanced_exercices_guide
AdvancedFramework/: CMakeLists.txt  Makefile  README.md
AdvancedFramework/src/: CMakeLists.txt
AdvancedFramework/src/Advanced03/: Advanced03  imgui.ini
AdvancedFramework/src/Advanced03/shaders/: simple_color.glsl
AdvancedFramework/src/Advanced03/src/: cg.cpp  cg.h  main.cpp
AdvancedFramework/src/framework/: camera.cpp  camera.h  config.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  shaderManager.cpp  shaderManager.h  texture.cpp  texture.h  window.cpp  window.h
Exercise02/: index.html
Exercise02/Advanced/: Advanced.js
Exercise02/Basic/: Basic1.js  Basic2.js  Helper.js
Exercise02/resources/css/: print.css
Exercise02/resources/js/: compare.js  dispatcher.js  jszip.js  sheet.js
Exercise03/: index.html
Exercise03/Advanced03/src/: cg.cpp
Exercise03/Basic/: Basic1.js  Basic2.js  Basic3.js  Basic4.js  shader_circlefromquad.fs  shader_wireframe.fs  shader_wireframe.vs
Exercise03/resources/js/: compare.js  dispatcher.js  sheet.js
Exercise04/: index.html
Exercise04/Advanced04/: Advanced04
Exercise04/Basic/: Basic1.js  Basic2.js  Basic3.js
Exercise04/resources/css/: print.css
Exercise04/resources/js/: compare.js  dispatcher.js  jszip.js  sheet.js
Exercise1/: index.html
Exercise1/Advanced/: Advanced.js
Exercise1/Advanced/resources/css/: print.css
Exercise1/Advanced/resources/js/: compare.js  num.js  sheet.js
Exercise1/Basic/: Basic1.js  Basic2.js  Basic3.html  Example.js
Exercise1/resources/js/: advanced_wrapper.js  dispatcher.js
